src/runtime/tests/golden/errors/06_private_field_access/source.z42
namespace Demo;

class Counter {
    private int count;
    Counter() { count = 0; }
    void Increment() { count = count + 1; }
}

void Main() {
    var c = new Counter();
    Console.WriteLine(c.count);
}
